- lots of bug fixes, as usual

2005-03-11: Version 0.1.5-BETA
- add include files like stdio.h, needed in some environments
- fix genre import
- if you have mysql embedded 4.1.11 or better, you can access embedded
  and external data bases with the same binary. If you omit the -h
  parameter, embedded is used. Without embedded support compiled in,
  the default for -h is still localhost
- renamed the Makefile conditional HAVE_SERVER to HAVE_ONLY_SERVER. This
  better reflects the new functionality.
- if you want to connect to the local server using sockets, you now
  do that with -h localhost. Up to now you had to specify -s. This is
  no longer needed. This better reflects the mysql C API. As a con-
  sequence, up to now not giving any argument to muggle called the
  server on localhost using TCP, now it uses the faster sockets. You
  can still request TCP by using -h 127.0.0.1

2005-03-21: Version 0.1.6-BETA
- killing vdr could still result in an empty muggle.state. Fixed.
- new sorting fields: Only by the first character of artist or title
- import now runs as a separate thread and no longer blocks user
  input and VDR is no longer killed by the watchdog during import

2005-04-19: Version 0.1.7-BETA
- Removed option -g. muggle now automatically does the right thing:
  GD compatibility mode is used when importing files [0-9][0-9]/filename
  relative to the toplevel directory where filename contains no /
- External command find is no longer needed
- Better error handling for unreadable files when playing
- Changed several includes from <vdr/X.h> to <X.h>
- Elected a new pope
- Makefile respects preset values for directories
- Debug messages now go into /var/log/debug. Up to now it was stderr.
- Playlist view: after pressing arrow up, playing looped backwards.
  Now it always goes forward.
- Play mode: in endless mode (all tracks), trying to go back on the
  first track restarted the first track. Now it goes to the last track.
- Added incremental search